--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.0",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~49.0.0",
+    "expo-status-bar": "~1.6.0",
+    "lodash.throttle": "^4.1.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-webview": "13.8.6"
+    "react-native": "0.72.6",
+    "react-native-webview": "13.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
