--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -10,14 +10,13 @@
   },
   "dependencies": {
     "expo": "~49.0.0",
-    "expo-notifications": "^0.32.15",
-    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
     "lodash.throttle": "^4.1.1",
     "react": "18.2.0",
     "react-native": "0.72.10",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.2.2",
+    "expo-splash-screen": "~0.20.5",
+    "expo-system-ui": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
