--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~49.0.0",
     "expo-status-bar": "~1.6.0",
+    "expo-notifications": "~0.20.0",
     "lodash.throttle": "^4.1.1",
     "react": "18.2.0",
     "react-native": "0.72.10",
