--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     plan: free
     env: python
     buildCommand: "./build.sh"
-    startCommand: "gunicorn webcomic.wsgi"
+    startCommand: "gunicorn webcomic.wsgi --timeout 120"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
